trabajo no terminado, imagen de marco difuminado no aplicado, instagram logo y log in buttonm no alineado en la misma línea y fonto de dicha caja no merge con el color de fondo.

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,9 @@ margin-top: 6%;
   width: 15px;
   background-color: white;
   padding-left: .7cm;
-  
+  border: 2px , solid, #eee;
+border-radius: 20px;
+box-sizing: border-box;
 
   
 }
