--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,42 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+ }
+
+.main {
+  background-image:url("/images/bgtile.png");
+  background-repeat: repeat-x;
+  padding-top:100px;
+}
+
+.outerwrapper {
+display:flex;
+flex-direction:row;
+justify-content:space-around;
+}
+.textcontentwrapper {
+  
+  width:400px;
+}
+
+.brandline {
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+}
+
+.logo img{
+  height:70px;
+
+}
+.badgewrapper {
+  display:flex;
+  justify-content: space-evenly;
+
+}
+.whitetextbox{
+  padding:10px;
+  background-image:url("/images/frame.png");
+  background-size:cover;
+  box-shadow: 10px 10px 10px black;
 }
