--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
  }
 
 .main {
-  background-image:url("/images/bgtile.png");
+  background-image:url("../images/bgtile.png");
   background-repeat: repeat-x;
   padding-top:100px;
 }
@@ -42,7 +42,7 @@ justify-content:space-around;
 }
 .whitetextbox{
   padding:10px;
-  background-image:url("/images/frame.png");
+  background-image:url("../images/frame.png");
   background-size:cover;
   box-shadow: 10px 10px 10px black;
 }
