--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 30px;
+}
+
+.left-side {
+  margin-right: 50px;
+}
+
+.right-side {
+  width: 500px;
+  align-items: flex-end;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 300px;
+}
+
+.log-in-button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center; 
+  width: 100px;
+  height: 40px;
+  background-color: rgb(51,93,133);
+  background: -webkit-gradient(linear, left top, left bottom, from(#7FB3D5), to(#154360));
+  color: white;
+  border-radius: 3px;
+  border-style: none;
+}
+
+
+.text {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding-top: 25px;
+  padding-left: 40px;
+  padding-right: 30px;
+  margin-bottom: 30px;
+  width: 420px;
+}
+
+h1 {
+  color: rgb(51,93,133); 
+  font-size: 1.5em;
+  width: 250px;
+}
+
+.badge-images {
+  display: flex; 
+  padding-left: 40px;
+}
+
+.badge-images div {
+  padding: 10px;
+}
+
+
+
+
+
+footer ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+  color: rgb(51,93,133);
+}
+footer ul li {
+  padding: 10px;
+  font-style: bold;
+}
+.insta {
+  color: grey;
 }
