--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,31 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue{
+  background-color: #1c5380;
+  height: 33.3vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+ 
+}
+
+
+-------
+
+https://github.com/jnothomb/Ironhack-lab-css-instagram-clone-COMPLETE-/blob/master/starter-code/css/main.css
+
+https://github.com/anreb/ironhack-lab-css-instagram-clone/blob/master/starter-code/css/main.css
+
+Use one of the CSS layout techniques to position elements on the page (display, float, flexbox, or grids)
+Look up in MDN and use CSS properties and values that may not have been covered in class, for example:
+background: url("YOUR-LINK.COM")
+list-style
+text-decoration
+text-transform
+Use a single external CSS stylesheet to style all pages
+
