--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,91 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 750px;
+}
+
+.blue-background {
+  background-color: #1c5380;
+  height: 260px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 1.6em;
+  font-weight: 900;
+  line-height: 30px;
+}
+
+#capture {
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 500px;
+  padding: 5px;
+  margin-top: 5px;
+}
+
+.text-container {
+  width: 450px;
+  box-sizing: border-box;
+  padding-bottom: 10px;
+  margin: 0 auto;  
+}
+
+#capture img {
+  margin-top: 10px;
+}
+
+#instagram a {
+  background-color: #3871a3;
+  color: white;
+  padding: 12px 12px 10px 30px;
+  text-decoration: none; 
+  position: relative;
+  left: 90px;
+  top: -35px;
+}
+
+#house-logo {
+ position: absolute;
+ top: 5px;
+ left: 1px;
+}
+
+#section{
+  display: flex;
+  justify-content: space-around;
+  margin: -200px 180px 0px;
+  box-sizing: border-box;
+}
+
+#section article {
+  margin-top: 20px;
+  height: 480px;
+
+}
+
+li {
+  list-style-type: none;
+  color: grey;
+  font-weight: 700;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 600px;
+  margin: 50px auto;
+}
+
+a {
+  color: #1c5380;
+  font-weight: 700;
+  font-size: 12px;
+}
+
+.insta-copywright {
+  margin-left: 30px;
+  font-size: 12px;
 }
