--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,73 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+body {
+  margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  width: 100%;
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+  width: 800px;
+  margin: 100px 150px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home {
+  height: 25px;
+  width: 25px;
+}
+
+.loginLink {
+  height:25px;
+  
+}
+
+.downloadButton {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.loginButton {
+  display: flex;
+  justify-content: space-between;
+  width: 100px;
+  height: 25px;
+}
+
+.textBox {
+  background-repeat: none;
+  position: relative;
+  width: 450px;
+  height: 370px;
+  
+}
+
+.textBox h1 {
+  position: absolute;
+  top: 4px;
+  left: 30px;
+  color: #06365f;
+  font-size: 25px;
+}
+
+.text {
+  position: absolute;
+  top: 100px;
+  left: 30px;
+  font-size: 15px;
 }
