--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .blue-background {
-  background-color: #1c5380;
+  background-image: linear-gradient(#6497c2, #06365f);
   height: 260px;
 }
 
@@ -35,7 +35,7 @@ h1 {
   width: 450px;
   box-sizing: border-box;
   padding-bottom: 10px;
-  margin: 0 auto;  
+  margin: 0 auto; 
 }
 
 #capture img {
@@ -43,7 +43,8 @@ h1 {
 }
 
 #instagram a {
-  background-color: #3871a3;
+  background-image: linear-gradient(#6497c2, #0f4472);
+  box-shadow: 0 0 1px #06365f;
   color: white;
   padding: 12px 12px 10px 30px;
   text-decoration: none; 
@@ -61,7 +62,7 @@ h1 {
 #section{
   display: flex;
   justify-content: space-around;
-  margin: -200px 180px 0px;
+  margin: -180px 180px 0px;
   box-sizing: border-box;
 }
 
@@ -95,3 +96,4 @@ a {
   margin-left: 30px;
   font-size: 12px;
 }
+
