--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,108 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+ main { 
+  display: flex;
+  justify-content: space-evenly;
+  /*border: crimson solid 3px;*/
+  margin: 80px;
+}
+
+.phones {
+  /*border: lightgreen solid 3px;*/
+  width: min-content;
+}
+
+.captureBox {
+  background-repeat: no-repeat;
+  background-size: 425px;
+  padding-top: 10px;
+  margin-top: 30px;
+  padding-left: 30px;
+  padding-right: 70px;
+  font-weight: 400;
+  /*border: rgb(236, 11, 169) solid 3px;*/
+}
+.captureBox p {
+  font-size: 14px;
+  
+}
+
+#rightContainer {
+  /*border: lightgreen solid 3px;*/
+  width: 500px;
+  align-content: center;
+  padding-top: 15px;
+  padding-left: 25px;
+}
+
+.logoBox {
+  padding-top: 10px;
+  padding-left: 6px;
+  padding-right: 13px;
+  /*border: rgb(23, 0, 128) solid 3px;*/
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cameraLogo {
+  width: 250px;
+}
+
+.downloadTags {
+  display: flex;
+  justify-content: space-around;
+  padding-right: 70px;
+  padding-left: 15px;
+  padding-top: 40px;
+}
+
+.login {
+  background-image: linear-gradient(#6489a7, #1c5380);
+  padding: 5px 10px 5px 10px;
+  border: #06365f solid 1px;
+  border-radius: 3px;
+  text-decoration: none;
+  color: lightgray;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+}
+
+h2 {
+  width: 250px;
+  color: #06365f;
+  line-height: 1.2;
+}
+
+
+ul {
+  /*border: rgb(23, 0, 128) solid 3px;*/
+  list-style-type: none;
+}
+
+
+#footer {
+  padding-right: 150px;
+  padding-left: 100px;
+}
+
+#footer ul {
+  color: #1c5380;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyRt {
+  color: lightgray;
 }
