--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,95 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.blue{
+  background-color:#1c5380 ;
+  height: 50vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  
+  align-items: center;
+ 
+}
+.phones{
+  margin-right: 10em;
+  margin-top: 33em;
+  margin-left: 05em;
+}
+.logo{
+  margin-right: 1em;
+  margin-top: 1em;
+  margin-left: 1em;
+  padding-right: 50px;
+  align-items: left;
+}
+
+.login{
+  text-decoration: solid;
+  margin: 0px; 
+  padding: 10px;
+  height: 25px;
+  background-color: #1c5380;
+  color: white; 
+  
+  
+}
+
+
+.white{
+  background-color: white;
+  height: 50vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+}
+.text{
+  height: 350px;
+  width: 500px;
+  background-color: white;
+  border-radius: 5px;
+  margin-bottom: 8em; 
+  margin-left: 25em;
+  padding: 20px;
+  background-size:2px 100%;
+  background-position:0 0, 100% 0;
+  background-repeat:no-repeat;
+}
+.text h3 {
+  font-weight: bold;
+  color: #06365f;
+}
+
+.text p {
+  
+  color: black;
+
+}
+
+
+ul {
+  display: flex;
+  list-style-type: none ;
+  justify-content: space-between;
+  margin: 20px;
+  padding: 0;
+}
+li{
+  
+  margin: 9px;
+}
+footer{
+
+  
+  color: #698aaf;  
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+  width: 660px;
+  text-transform: uppercase;
+  margin-left: 420px;
+}
