--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,37 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/00-Classes Labs/lab07-0106-css-instagram-clone/images/bgtile.png");
+  /* background-position: top; ---nao sei se faz diferença*/
+  background-repeat: repeat-x;
+  background-size: 100% 47%;
 }
+
+
+
+#textBox {
+  background-image: url("/00-Classes Labs/lab07-0106-css-instagram-clone/images/frame.png");
+  background-repeat: no-repeat;
+}
+
+nav ul {
+  width: 60%;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end; 
+}
+
+/* -----FLEXBOX EM COMUM---- */
+
+.centralizarEixoY {
+  display: flex;
+  flex-direction: column;  
+  justify-content: space-around;
+  align-items: center;
+}
+
+/* #imgAndText {
+  display: flex;
+  justify-content: space-between;
+} */
