--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,77 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  width: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1 {
+  color:#06365f;
+}
+
+.flex-box {
+  display: flex;
+  justify-content: center;
+  margin: 100px; 
+}
+
+.brand {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2%;
+}
+
+.log-in {
+  padding: 2%;
+  display: flex;
+}
+
+.log-in > button {
+  color: lightsteelblue;
+  background-color: #1c5380;
+  border-style: none;
+  box-shadow: 1px 1px 5px 0 #000;
+  display: flex;
+  align-items: center;
+  width: 80px;
+}
+
+.content {
+  background-color: white;
+  border-style: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #000;
+  padding: 5%;
+  margin: 2%;
+  width: 600px;
+}
+
+.content > p {
+line-height: 1.5;
+}
+
+.phone-container {
+  margin: 2%;
+}
+
+
+.download {
+  border-style: none;
+  background-color: white;
+}
+
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+li {
+  list-style: none;
+  text-transform: uppercase;
 }
