--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,108 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(0deg,white 70%,#1c5380 40%, #1c5380);
+  background-repeat: no-repeat;
+  width:100vw;
+  height:100vh;
+}
+
+section{
+  width:100%;
+  height:80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.login-logo{
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding:0 10px 20px;
+}
+
+h1{
+  color:#06365f;
+  font-size: 20px;;
+}
+
+p{
+  font-size: 15px;
+}
+
+.login-logo button{
+display: flex;
+justify-content: space-between;
+align-items: center;
+font-weight: bold;
+color: whitesmoke;
+background-color: #1c5380;
+border-radius: 4px;
+height:40px;
+padding:10px;
+border-color:lightsteelblue;
+}
+
+.buttons{
+display:flex;
+justify-content: space-around;
+width: 77%;
+}
+.buttons img{
+  width: 80%
+  
+}
+
+.iphones{
+margin:50px;
+}
+
+.iphones img{
+width:290px;
+}
+
+
+.text{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+
+}
+
+.instagram-body{
+  width: 500px;
+}
+
+.text{
+padding:20px 40px
+}
+
+footer{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  
+}
+footer ul{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width:30%;
+  margin-top: -100px;
+  color:#1c5380 ;
+}
+
+footer ul li{
+  list-style: none;
+  font-size: 13px;
+  font-weight:bold;
+  color:#1c5380;
+}
+#instagram{
+  color:darkgrey
+}
+
+strong{
+  font-weight: bold;
 }
