--- a/styles/style.css
+++ b/styles/style.css
@@ -7,23 +7,28 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: auto
 }
 
 #main{
   background-image: url('../images/bgtile.png');
   background-repeat: repeat-x;
-  width: 250%;
+  background-position-x: center;
+  /*width: 250%;*/
   display: flex;
   justify-content: center;
-  padding: 50px;
+  padding: 20px;
+  position: relative;
 }
 
 #iphonepicbox img{
+  margin-top: 70px;
 }
 
 #textbox{
 background-image: url("../images/frame.png");
-padding: 28px 40px;
+margin-top: 70px;
+padding: 15px 40px;
 background-repeat: no-repeat;
 }
 
@@ -57,12 +62,12 @@ background-repeat: no-repeat;
 
 .logInButton img{
 margin-left: auto;
-justify-content: flex-start;
+float: left;
 }
 
 .logInButton p{
 margin-right: auto;
-justify-content: flex-end;
+float: right
 }
 
 h2{
@@ -89,10 +94,10 @@ h2{
 }
 
 footer{
-  margin: 40px auto; 
+  margin: 30px auto; 
   display: flex;
   justify-content: center;
-  width: 250%;
+  /*width: 250%;*/
 }
 
 footer ul {
