--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ body {
   /* background-size: cover; */
   /* background-position: center;
   background-repeat: no-repeat; */
+  padding: 20px;
 }
 
 #infoBox {
@@ -84,7 +85,7 @@ footer {
 
 nav ul {
   /* display: inline; */
-  width: 60%;
+  width: 100%;
   list-style: none;
   display: flex;
   justify-content: space-around;
