--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,119 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  position: relative;
+}
+
+h1 {
+  margin-top: 0px;
+  color: #06365f;
+}
+
+.blue_background {
+  background-color: #06365f;
+  height: 45vh;
+}
+
+main {
+  width: 80vw;
+  position: absolute;
+  top: 10vh;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
+}
+
+section img {
+  height: 70vh;
+  width: auto;
+}
+
+section span {
+  width: 50%;
+}
+
+section span div:first-of-type {
+  height: 15%;
+  background-image: url("../images/brand.png");
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+section span div:first-of-type button {
+  background-color: #1c5380;
+  color: white;
+  display: flex;
+  padding: 7px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.8 solid rgba(0, 0, 0, 0.8);
+  border-radius: 2px;
+  border-style: none;
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.2);
+}
+
+section span div:first-of-type button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+button img {
+  height: 15px;
+}
+
+section span div:last-of-type {
+  margin-top: 25px;
+  background-color: white;
+  height: 40%;
+  border-width: 1px 1px 0px 1px;
+  border-color: white;
+  border-style: solid;
+  box-shadow: 0px -3px 2px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 10px 10px 0px 0px;
+  padding: 20px;
+}
+
+a img {
+  width: auto;
+  height: 5vh;
+  margin-right: 30px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+footer div {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+a {
+  font-size: 1em;
+  text-decoration: none;
+  color: #1c5380;
+}
+
+a:hover {
+  text-decoration: underline;
 }
