most recent edits

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,109 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: space-between;
+}
+
+.rectangles {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: stretch;
+}
+
+.rectangles #blue-rectangle {
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+  position: absolute;
+  height: 40%;
+  width: 100%;
+  z-index: -1;
+}
+
+.rectangles #white-rectangle {
+  background-color: white;
+  height: 60%;
+  width: 100%;
+  
+}
+
+.main-section {
+  border: 5px solid green;
+}
+
+.nav-bar {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-end;
+	align-content: flex-end;
+  margin: 90px 70px 50px 600px;
+  border: 5px solid yellow;
+}
+
+.main-section li {
+  list-style-type: none;
+  text-align: center;
+}
+
+.button-image img {
+  width: 50px;
+  height: 45px;
+  padding-top: 30px;
+}
+
+.button a {
+  width: 30px;
+  height: 30px;
+  padding-top: 600px;
+  padding-right: 50px;
+  border: 1px solid pink;
+  color: white;
+  text-decoration: none;
+  font-size: 2em;
+} 
+
+.main-section main {
+    background-color: white;
+    width: 400px;
+    height: 500px;
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+h2 {
+  
+}
+.foot ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  align-content: center;
+  width: 60%;
+  padding-left: 20%;
+}
+
+.foot a {
+  text-decoration: none;
+  color: #266ba3;
+  font-weight: bold;
+}
+
+.foot .copy {
+  color: rgb(223, 223, 223);
+  font-weight: bold;
+
 }
